# Oxidact

./: Cargo.toml  README.md
Version_02/: README.md
oxidact-cli/: Cargo.toml
oxidact-cli/src/: main.rs
oxidact-core/: Cargo.toml
oxidact-core/src/: lib.rs
oxidact-macros/: Cargo.toml
oxidact-macros/src/: lib.rs
scripts/: platforms.sh
src/: app.rs  lib.rs  main.rs  screens.rs  wasm_internal.rs
src/components/: bottom_nav.rs
src/navigation/: mod.rs
src/screens/: cadastro.rs  login.rs  mod.rs  perfil.rs
src/styles/: auth.rs  bottom_nav.rs  mod.rs
web/: index.html
