[workspace]
members = ["oxidact-core", "oxidact-macros", "oxidact-cli"]

[package]
name = "oxidact_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oxidact-core = { path = "./oxidact-core" }
oxidact-macros = { path = "./oxidact-macros" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location", "Document", "Element", "Node", "HtmlElement", "console"] }
