[package]
name = "oxidact-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "0.19", features = ["webgl"] }
winit = { version = "0.29", features = ["android-native-activity"] }
pollster = "0.3" # Para rodar o async do WGPU no main

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Element", "Node", "HtmlElement", "console"] }
